# Data-Structures-Cpp

./: CMakeLists.txt  README.md  build.sh  main  main.cpp  makefile  prova.cpp
binarytree/: binarytree.cpp  binarytree.hpp
binarytree/lnk/: binarytreelnk.cpp  binarytreelnk.hpp
binarytree/vec/: binarytreevec.cpp  binarytreevec.hpp
bst/: bst.cpp  bst.hpp
container/: container.hpp  dictionary.cpp  dictionary.hpp  foldable.cpp  foldable.hpp  linear.cpp  linear.hpp  mappable.cpp  mappable.hpp  testable.hpp  traversable.cpp  traversable.hpp
iterator/: iterator.hpp
list/: list.cpp  list.hpp
queue/: queue.hpp
queue/lst/: queuelst.cpp  queuelst.hpp
queue/vec/: queuevec.cpp  queuevec.hpp
stack/: stack.hpp
stack/lst/: stacklst.cpp  stacklst.hpp
stack/vec/: stackvec.cpp  stackvec.hpp
vector/: vector.cpp  vector.hpp
zlasdtest/: test.cpp
zlasdtest/binarytree/: binarytree.hpp
zlasdtest/bst/: bst.hpp
zlasdtest/container/: container.cpp  dictionary.hpp  foldable.hpp  linear.hpp  mappable.hpp
zlasdtest/exercise1a/: fulltest.cpp  simpletest.cpp
zlasdtest/exercise1b/: fulltest.cpp  simpletest.cpp
zlasdtest/exercise2a/: fulltest.cpp  simpletest.cpp
zlasdtest/exercise2b/: fulltest.cpp
zlasdtest/iterator/: iterator.hpp
zlasdtest/list/: list.hpp
zlasdtest/queue/: queue.hpp
zlasdtest/stack/: stack.hpp
zlasdtest/vector/: vector.hpp
zmytest/: test.cpp  test.hpp
zmytest/StackQueue/: queue.cpp  queue.hpp  stack.cpp  stack.hpp
zmytest/VectorList/: list.cpp  list.hpp  vector.cpp  vector.hpp
zmytest/list/: list.cpp  list.hpp
(+6 files in other folders)
